@@ -19,22 +19,30 @@ trait SparkJob {
     conf.set("spark.hadoop.mapred.output.compression.type", "BLOCK")
     conf.set("spark.dynamicAllocation.enabled", "false")
     conf.set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
-    conf.set("spark.kryoserializer.buffer.max", "2000m")
+    conf.set("spark.kryoserializer.buffer.max", "1024m")
     conf.set("spark.sql.shuffle.partitions", "400")
+    conf.set("spark.yarn.executor.memoryOverhead", "512")
+    conf.set("spark.executor.extraJavaOptions", "-XX:+DisableExplicitGC -XX:SurvivorRatio=1 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection -XX:CMSFullGCsBeforeCompaction=0 -XX:+CMSClassUnloadingEnabled -XX:LargePageSizeInBytes=128M -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps")
     conf
   }
 
   protected def createContext(conf: SparkConf, awsId: String = "", awsKey: String = ""): SparkContext = {
     showCurrentConfiguration(conf)
     val context = new SparkContext(conf)
-    context.hadoopConfiguration.set("fs.s3.awsAccessKeyId", awsId)
-    context.hadoopConfiguration.set("fs.s3.awsSecretAccessKey", awsKey)
+    setAwsS3Access(awsId, awsKey, context)
     context
   }
 
-  protected def createStream(conf: SparkConf, seconds: Duration = Seconds(30)): StreamingContext = {
+  private def setAwsS3Access(awsId: String, awsKey: String, context: SparkContext) = {
+    context.hadoopConfiguration.set("fs.s3.awsAccessKeyId", awsId)
+    context.hadoopConfiguration.set("fs.s3.awsSecretAccessKey", awsKey)
+  }
+
+  protected def createStream(conf: SparkConf, awsId: String = "", awsKey: String = "", seconds: Duration = Seconds(30)): StreamingContext = {
     showCurrentConfiguration(conf)
-    new StreamingContext(conf, seconds)
+    val context = new StreamingContext(conf, seconds)
+    setAwsS3Access(awsId, awsKey, context.sparkContext)
+    context
   }
 
   private def showCurrentConfiguration(conf: SparkConf) = {
